# claude-for-legal-ar

./: .gitignore  LICENSE  PUSH-TO-GITHUB.md  QUICKSTART.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: wp-cron-trigger.yml
contenido-vadillo/: indice-columnas-mdz.md  indice-guias-mariovadillo.md  indice-noticias-mariovadillo.md  servicios-estudio.md
derecho-admin-mendoza/: CLAUDE.md
derecho-admin-mendoza/.claude-plugin/: plugin.json
derecho-admin-mendoza/skills/cold-start-interview/: SKILL.md
derecho-consumidor/: .mcp.json  CLAUDE.md  README.md
derecho-consumidor/.claude-plugin/: plugin.json
derecho-consumidor/references/: ccycn-consumo.md  ldc-24240.md  normativa-mendoza.md
derecho-consumidor/skills/cold-start-interview/: SKILL.md
derecho-consumidor/skills/escrito-dano-punitivo/: SKILL.md
derecho-consumidor/skills/intimacion-servicio-publico/: SKILL.md
derecho-consumidor/skills/revision-clausulas-abusivas/: SKILL.md
leyes/: bcra-com-a-7146.md  ccyc-arts-clave.md  cn-arts-42-43.md  decreto-reglamentario-1759-72.md  ldc-24240.md  ley-mendoza-9589.md  lpa-mendoza-9003.md  lpa-nacional-19549.md
mcp-servers/ar-legal-sources/: README.md  pyproject.toml
mcp-servers/ar-legal-sources/src/ar_legal_sources/: __init__.py  bo_mendoza.py  bora.py  infoleg.py  organismos.py  server.py
referencias/: fuentes-juridicas-oficiales.md
scripts/: .env.example  ingest-mdz-articles.py  ingest-vadillo-wordpress.py  requirements.txt
