[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ar-legal-sources"
version = "0.1.0"
description = "Servidor MCP para fuentes legales argentinas: Infoleg, BORA, BO Mendoza."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Mario Vadillo", email = "contacto@mariovadillo.com.ar" }
]
keywords = ["mcp", "claude", "legal", "argentina", "infoleg", "bora"]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0"
]

[project.scripts]
ar-legal-sources = "ar_legal_sources.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ar_legal_sources"]
